# pinpam

./: .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix
.github/: copilot-instructions.md
pinpam-core/: Cargo.toml
pinpam-core/locales/: en.yml  sk.yml
pinpam-core/src/: lib.rs  master_key.rs  pamlog.rs  pin.rs  pinconstants.rs  pindata.rs  pinerror.rs  pinindex.rs  pinmanager.rs  pinpolicy.rs  tcti.rs  util.rs
pinpam-core/tests/: swtpm_pin.rs  test_mixed_chars.rs
pinpam-core/tests/common/: mod.rs
pinpam-master-key-pam/: Cargo.toml
pinpam-master-key-pam/src/: lib.rs
pinpam-pam/: Cargo.toml
pinpam-pam/src/: lib.rs
pinpam-pam/tests/: first_pass.rs
pinutil/: Cargo.toml
pinutil/locales/: en.yml  sk.yml
pinutil/src/: main.rs  sandbox.rs
