[workspace]
members = [
    "pinpam-core", "pinpam-master-key-pam",
    "pinpam-pam", 
    "pinutil"
]
resolver = "2"

[workspace.dependencies]
'tss-esapi' = { version = "7.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4"
env_logger = "0.11"
rust-i18n = "3.1.5"
locale_config = "0.3.0"
