[package]
name = "pinpam-master-key"
version = "0.0.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
pam-sys = "0.5.6"
env_logger.workspace = true
libc = "0.2"
syslog = "7"
nix = { version = "0.29", default-features = false, features = ["user"] }
pinpam-core = { path = "../pinpam-core" }
rust-i18n = { workspace = true }
locale_config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
