[package]
name = "pinpam-pam"
version = "0.0.4"
edition = "2021"
description = "TPM PIN authentication PAM module"
license = "MIT"

[lib]
name = "pinpam"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
pam-sys = "0.5.6"
env_logger.workspace = true
libc = "0.2"
syslog = "7"
nix = { version = "0.29", default-features = false, features = ["user"] }
pinpam-core = { path = "../pinpam-core" }
rust-i18n = { workspace = true }
locale_config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Add PAM bindings when available
# pam-sys = "1.0"  # or whatever PAM crate you prefer

[features]
default = []
